Clarify docs
